; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mdio/extr_mdio.c_mdio_identify.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mdio/extr_mdio.c_mdio_identify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@mdio_driver = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @mdio_identify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mdio_identify(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @mdio_driver, i32 0, i32 0), align 4
  %7 = call i32* @device_find_child(i32 %5, i32 %6, i32 -1)
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @mdio_driver, i32 0, i32 0), align 4
  %12 = call i32 @BUS_ADD_CHILD(i32 %10, i32 0, i32 %11, i32 -1)
  br label %13

13:                                               ; preds = %9, %2
  ret void
}

declare dso_local i32* @device_find_child(i32, i32, i32) #1

declare dso_local i32 @BUS_ADD_CHILD(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
